fixed text wrapping issue on signup button

--- a/site/styles/_buttons.scss
+++ b/site/styles/_buttons.scss
@@ -38,6 +38,7 @@
   color: $signup-text-color;
   border: 3px solid $signup-border-color;
   background-color: $signup-background; 
+  white-space: initial;
   @include media-breakpoint-up(xl) {
     font-size: 16px;
   }
